--- a/media/css/common.css
+++ b/media/css/common.css
@@ -1,43 +1,48 @@
 /* Document configurations */
-body                 { padding: 0px; margin: 0px; font-family: monospace, sans-serif; font-size: 16pt;
-                       line-height: 32px; display: flex; flex-direction: column; min-height: 100vh; }
+body                 { padding: 0px; margin: 0px; font-family: Inter, sans-serif; font-size: 15px; font-weight: 300;
+                       line-height: 28px; display: flex; flex-direction: column; min-height: 100vh; }
 
 /* Titles */
-h1, h2, h3, h4, h5   { padding: 0; margin-top: 60px; color: #83a598; }
-h1                   { font-size: 55px; line-height: 1.1em; }
-h2                   { font-size: 40px; line-height: 1.1em; }
-h3                   { font-size: 30px; line-height: 1.1em; }
+h1, h2, h3, h4, h5   { font-family: Lora, serif; padding: 0; margin-top: 60px; font-weight: 500; margin-bottom: 30px; }
+h1                   { font-size: 32px; line-height: 1.1em; }
+h2                   { font-size: 24px; line-height: 1.1em; }
+h3                   { font-size: 18px; line-height: 1.1em; }
+
+/* paragraphs */
+p                    { margin-bottom: 30px; }
+p:last-child         { margin-bottom: 60px; }
 
 /* links */
-a                    { color: #fabd2f; text-decoration: none; }
-a:hover              { color: #fff; }
+a                    { color: #D48F20; text-decoration: none; }
+a:hover              { color: #A56E16; }
 
 /* Horizontal bar */
-hr                   { border-top: 0; border-bottom: solid 1px #3c3836; }
+hr                   { border-top: 0; border-bottom: solid 1px #E7E7E7; margin: 0; }
+
+/* Images */
+img                 { width: 100%; }
 
 /* Element that wraps everything */
-.container           { width: calc(55% - 100px); padding: 10px 150px; margin: 0 auto; }
+.container           { width: calc(50% - 100px); padding: 10px 150px; margin: 0 auto; }
 
 /* Elements that can appear anywhere */
 .note                { background-color: #504945; padding: 5px 25px; border-radius: 10px; }
 .centralized img     { margin: auto auto; display: block; }
 
 /* Top bar with the badges */
-.social              { margin: 60px 0; }
-.social .avatar      { width: 100px; height: 100px; display: block; margin: 0 auto; float: left;
-                       background-color: #fb4934; border-radius: 10px; padding: 6px 4px; }
-.social .badges      { float: right; width: 155px; font-size: 36px; list-style: none; display: block; }
+.social              { margin: 15px; }
+.social .avatar      { width: 50px; height: 50px; display: block; margin: 0 auto; float: left; }
+.social .badges      { float: right; font-size: 36px; list-style: none; display: block; margin: 0; }
 .social .badges li   { padding-left: 8px; float: left; }
-.social .badges a    { float: left; display: block; width: 36px; height: 36px; overflow: hidden; margin-left: 5px; padding: 1px;
-                       color: #7c6f64; }
-.social .badges a:hover { color: #fb4934; }
+.social .badges a    { float: left; display: block; width: 30px; overflow: hidden; margin-left: 10px; padding: 5px; color: #212121; background: #E3F9BF; border-radius: 20px; text-align: center; transition: 0.3s;}
+.social .badges a:hover { background: #FFE3A3; }
 .social .badges a span  { height: 50px; }
 
 /* Footer */
-.footer              { font-size: .8em; margin: 0; }
-.footer .email-link  { text-align: center; font-size: 30px; color: #666; padding: 40px 0; }
-.footer .bg          { background: #3c3836; padding: 40px 0; }
-.footer a            { color: #000; text-decoration: none; }
+.footer              { font-size: .8em; margin: 60px 0 0 0; color: #BDBDBD; }
+.footer .email-link  { text-align: center; font-size: 30px; color: #BDBDBD; padding: 40px 0; }
+.footer .bg          { background: #212121; padding: 40px 0; }
+.footer a            { text-decoration: none; }
 .footer a:hover      { text-decoration: underline; background: transparent; }
 
 /* Listing */
